kubernetes/1-k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exalt-ns
  labels:
    app: exalt-ns
