kubernetes/3-k8s-db.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-account-app-apis-dbs
  labels:
    app: bank-account-app-apis-dbs
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-account-app-apis-dbs
  template:
    metadata:
      name: bank-account-app-apis-dbs
      labels:
        app: bank-account-app-apis-dbs
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: bank-account-app-apis-dbs
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: db-host-port
          startupProbe:
            tcpSocket:
              port: db-host-port
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: db-host-port
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: db-host-port
            initialDelaySeconds: 30
            periodSeconds: 15
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: bank-account-app-volume
      volumes:
        - name: bank-account-app-volume
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
      restartPolicy: Always

---
# database service
apiVersion: v1
kind: Service
metadata:
  name: bank-account-app-apis-dbs
  labels:
    app: bank-account-app-apis-dbs
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: bank-account-app-apis-dbs
  ports:
    - port: 3306
      protocol: TCP
      targetPort: db-host-port
      name: db-host-port-svc
  type: ClusterIP
