kubernetes/4-1-k8s-kafka-infra-broker.yaml
# kafka servers
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-server
  labels:
    app: kafka-server
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kafka-server
  template:
    metadata:
      name: kafka-server
      labels:
        app: kafka-server
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: kafka-server
          image: obsidiandynamics/kafka
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              protocol: TCP
              name: kafka-port
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-server
  labels:
    app: kafka-server
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: kafka-server
  ports:
    - port: 9092
      protocol: TCP
      targetPort: kafka-port
      name: kafka-port-svc
  type: ClusterIP
