kubernetes/4-3-k8s-kafka-infra-kafka-ui.yaml
# kafka ui
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      name: kafka-ui
      labels:
        app: kafka-ui
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: kafka-ui-port
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      protocol: TCP
      targetPort: kafka-ui-port
      name: kfk-ui-port-svc
  type: ClusterIP
