kubernetes/5-k8s-bs-ms-security.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exalt-business-ms-spring-security-aouth2-res-server
  labels:
    app: exalt-business-ms-spring-security-aouth2-res-server
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exalt-business-ms-spring-security-aouth2-res-server
  template:
    metadata:
      name: exalt-business-ms-spring-security-aouth2-res-server
      labels:
        app: exalt-business-ms-spring-security-aouth2-res-server
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: exalt-business-ms-spring-security-aouth2-res-server
          image: placidenduwayo1/exalt-business-ms-spring-security-aouth2-res-server:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8102
              name: security-port
          livenessProbe:
            httpGet:
              port: security-port
              path: /actuator/health/liveness
            initialDelaySeconds: 50
            periodSeconds: 30
          readinessProbe:
            httpGet:
              port: security-port
              path: /actuator/health/readiness
            initialDelaySeconds: 50
            periodSeconds: 30
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exalt-business-ms-spring-security-aouth2-res-server
  labels:
    app: exalt-business-ms-spring-security-aouth2-res-server
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: exalt-business-ms-spring-security-aouth2-res-server
  ports:
    - protocol: TCP
      port: 8102
      targetPort: security-port
      name: security-port
  type: ClusterIP
