kubernetes/5-k8s-ms-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exalt-microservices-configuration-server
  labels:
    app: exalt-microservices-configuration-server
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exalt-microservices-configuration-server
  template:
    metadata:
      name: exalt-microservices-configuration-server
      labels:
        app: exalt-microservices-configuration-server
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: exalt-microservices-configuration-server
          image: placidenduwayo1/exalt-microservices-configuration-server:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8100
              name: ms-config-svc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exalt-microservices-configuration-server
  labels:
    app: exalt-microservices-configuration-server
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: exalt-microservices-configuration-server
  ports:
    - port: 8100
      protocol: TCP
      targetPort: ms-config-svc
      name: ms-config-port
  type: ClusterIP
