kubernetes/6-1-k8s-bs-ms-bank-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exalt-business-microservice-bank-account
  labels:
    app: exalt-business-microservices-bank-account
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exalt-business-microservice-bank-account
  template:
    metadata:
      name: exalt-business-microservice-bank-account
      labels:
        app: exalt-business-microservice-bank-account
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: exalt-business-microservice-bank-account
          image: placidenduwayo1/exalt-business-microservice-bank-account:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8104
              name: b-account-api
          livenessProbe:
            tcpSocket:
              port: b-account-api
            initialDelaySeconds: 50
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: b-account-api
            initialDelaySeconds: 50
            periodSeconds: 30
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exalt-business-microservice-bank-account
  labels:
    app: exalt-business-microservice-bank-account
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: exalt-business-microservice-bank-account
  ports:
    - protocol: TCP
      port: 8104
      targetPort: b-account-api
      name: bank-account
  type: ClusterIP
