kubernetes/6-1-k8s-bs-ms-customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exalt-business-microservice-customer
  labels:
    app: exalt-business-microservice-customer
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exalt-business-microservice-customer
  template:
    metadata:
      name: exalt-business-microservice-customer
      labels:
        app: exalt-business-microservice-customer
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: exalt-business-microservice-customer
          image: placidenduwayo1/exalt-business-microservice-customer:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8103
              name: customer-api
          livenessProbe:
            httpGet:
              port: customer-api
              path: /actuator/health/liveness
            initialDelaySeconds: 50
            periodSeconds: 30
          readinessProbe:
            httpGet:
              port: customer-api
              path: /actuator/health/readiness
            initialDelaySeconds: 50
            periodSeconds: 30
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exalt-business-microservice-customer
  labels:
    app: exalt-business-microservice-customer
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: exalt-business-microservice-customer
  ports:
    - protocol: TCP
      port: 8103
      targetPort: customer-api
      name: customer-port
  type: ClusterIP
