kubernetes/6-3-k8s-bs-ms-operation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exalt-business-microservice-operation
  labels:
    app: exalt-business-microservice-operation
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exalt-business-microservice-operation
  template:
    metadata:
      name: exalt-business-microservice-operation
      labels:
        app: exalt-business-microservice-operation
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: exalt-business-microservice-operation
          image: placidenduwayo1/exalt-business-microservice-operation:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8105
              name: operation-api
          livenessProbe:
            httpGet:
              port: operation-api
              path: /actuator/heath/liveness
            initialDelaySeconds: 50
            periodSeconds: 30
          readinessProbe:
            httpGet:
              port: operation-api
              path: /actuator/health/readiness
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exalt-business-microservice-operation
  labels:
    app: exalt-business-microservice-operation
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: exalt-business-microservice-operation
  ports:
    - protocol: TCP
      port: 8105
      targetPort: operation-api
      name: operation-port
  type: ClusterIP
