kubernetes/6-4-k8s-frontend-angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exalt-bank-account-app-frontend-angular
  labels:
    app: exalt-bank-account-app-frontend-angular
  namespace: exalt-bank-account-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exalt-bank-account-app-frontend-angular
  template:
    metadata:
      name: exalt-bank-account-app-frontend-angular
      labels:
        app: exalt-bank-account-app-frontend-angular
    spec:
      serviceAccountName: exalt-bank-account-app-sa
      containers:
        - name: exalt-bank-account-app-frontend-angular
          image: placidenduwayo1/exalt-bank-account-app-frontend-angular:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: front-port
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exalt-bank-account-app-frontend-angular
  labels:
    app: exalt-bank-account-app-frontend-angular
  namespace: exalt-bank-account-app-ns
spec:
  selector:
    app: exalt-bank-account-app-frontend-angular
  ports:
    - protocol: TCP
      port: 80
      targetPort: front-port
      name: front-svc-port
  type: ClusterIP
