kubernetes/1-1-k8s-ingress-nginx-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exalt-bank-account-app-ingress-nginx
  labels:
    app: exalt-bank-account-app-ingress-nginx
  namespace: exalt-bank-account-app-ns
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
spec:
  ingressClassName: nginx
  rules:
    - host: exalt.kafka-ui.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  name: kfk-ui-port-svc

    - host: exalt.mss-config-server-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exalt-microservices-configuration-server
                port:
                  name: ms-config-port

    - host: exalt.bs-ms.security-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exalt-business-ms-spring-security-aouth2-res-server
                port:
                  name: security-port

    - host: exalt.bs-ms.customer-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exalt-business-microservice-customer
                port:
                  name: customer-port

    - host: exalt.bs-ms.bank-account-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exalt-business-microservice-bank-account
                port:
                  name: bank-account

    - host: exalt.bs-ms.operation-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exalt-business-microservice-operation
                port:
                  name: operation-port

    - host: exalt.front-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exalt-bank-account-app-frontend-angular
                port:
                  name: front-svc-port
