kubernetes/7-1-k8s-ingress-nginx-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exalt-bank-account-app-ingress-nginx
  labels:
    app: exalt-bank-account-app-ingress-nginx
  namespace: exalt-bank-account-app-ns
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  name: kfk-ui-port-svc
    - host: mss-config-server.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exalt-microservices-configuration-server
                port:
                  name: ms-config-port
